# tree-sitter-october

./: .gitignore  BUILD.md  CHANGELOG.md  CONFIGURATION_AND_PHP_SUPPORT.md  Cargo.toml  Makefile  README.md  binding.gyp  grammar.js  package-lock.json  package.json  parser.exp  parser.lib  pyproject.toml  setup.py  test-config-php.js  test-config.htm  test-highlight.js  test-simple.htm  test.js
bindings/c/: tree-sitter-october.h  tree-sitter-october.pc.in
bindings/node/: binding.cc  index.js
bindings/rust/: build.rs  lib.rs
examples/: basic.htm  config-markup.htm  config-only.htm  full-template.htm  layout.htm  markup-only.htm  page.htm  partial.htm  php-only.htm
queries/: highlights.scm  injections.scm  tags.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
