[package]
name = "tree-sitter-october"
description = "October CMS grammar for the tree-sitter parsing library"
version = "0.1.0"
keywords = ["incremental", "parsing", "october", "octobercms"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/yourusername/tree-sitter-october"
edition = "2021"
license = "MIT"

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.22"

[build-dependencies]
cc = "1.0"
