[package]
name = "tree-sitter-october"
description = "October CMS grammar for the tree-sitter parsing library (based on Twig)"
version = "0.1.0"
keywords = ["incremental", "parsing", "october", "octobercms", "twig"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/artistro08/tree-sitter-october"
edition = "2021"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20"

[build-dependencies]
cc = "1.0"
